--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,4 @@
-* {
-    font-family: sans-serif;
-}
+* {font-family: sans-serif;}
 body {
     background-color: #ced88b;
 }
@@ -8,10 +6,8 @@ ul {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
     margin: 0;
-    padding: 0;
-    width: flex;
+    width: 100%;
     background-color: rgb(42, 42, 48);
     text-align: center;
     height: 60px;
@@ -19,51 +15,63 @@ ul {
     font-size: x-large;
   }
 li { 
-    display: block;
+    list-style-type: none;    
     text-align: center;
     padding: 16px 16px;
     text-decoration: none;
-}
-li:hover {
-    background-color: rgb(212, 150, 16);
-    transition: 0.5s;
 }
 h1 {
     font-size: xx-large;
     margin-top: 30px;
     text-align: center;
-   
 }
-
-
+p{
+    font-size: x-large;
+    margin-top: 60px;
+    text-align: center;
+}
+@media only screen and (max-width: 900px) {
+    body {
+      background-color: rgb(57, 201, 169);
+    }
+  }
 button {
     margin-top: 80px;
     height: 50px;
     width: 155px;
     background-color: #5030ee;
-    
     font-size: large;
     border-radius: 25px;
     border: transparent;
-    color: white;
 }
+button:hover {
+    background-color: #1f0a86;
+    transition: 0.7s;
+}
+#submit{
+    margin-left: 20px;
+    width: 65px;
+    height: 65px;
+    color: black;
+    background-color: rgb(116, 207, 116);
+    border-radius: 50%;
+ }
+#submit:hover { background-color: #1a8a29;}
 a:link {
     color: white;
     text-decoration: none;
-    
 }
 a:visited {
-    color: yellow;
+    color: rgb(4, 202, 169);
 }
 p{
-    font-size: xx-large;
+    font-size: x-large;
     margin-top: 60px;
     text-align: center;
 }
 input {
     border: none;
     background-color: transparent;
-    
     border-bottom: 4px solid #1a98ca;
     margin-top: 20px;
     margin-left: 45.5%;
